--- a/Casual.html
+++ b/Casual.html
@@ -107,7 +107,7 @@ window.addEventListener("load", function(){
    var timer = setInterval(menutime,1000);
 
   function menutime(){
-  if(time < 0){
+  if(time <= 1){
   window.location.href = "TrainStation.html";
   }
   time = time -1;
