Fix character select screen

--- a/Casual.html
+++ b/Casual.html
@@ -59,6 +59,10 @@ window.addEventListener("load", function(){
     opacity: 0.8;
     }
 
+    p{
+    text-align: center;
+    }
+
     button:hover {
       opacity: 0.8;
     }
@@ -103,7 +107,7 @@ window.addEventListener("load", function(){
 
    <script>
    var video = document.getElementById("myVideo");
-   var time = 5;
+   var time = 31;
    var timer = setInterval(menutime,1000);
 
   function menutime(){
@@ -127,9 +131,9 @@ window.addEventListener("load", function(){
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<p style="position: absolute; top:10%; left:50%; text-align: center; z-index: +5;">Choose Your Operator</p>>
+<p style="position: absolute; top:60%; left:50%; margin-top: -299.5px; margin-left: -299.5px;width: 599px;height: 599px; z-index: +5;">Choose Your Operator</p>>
 
-<p id="timer" style="position: absolute; top:0%; left:50%; text-align: center;"></p>
+<p id="timer" style="position: absolute; top:5%; left:50%; margin-top: -25px; margin-left: -25px;width: 50px;height: 50px; text-align: center;"></p>
 
 <a id="Tortue" href="TrainStation.html">
   <img srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Tortue.png">
