Added Howler sound and loading screen

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -143,7 +143,9 @@ div#load_screen > div#loading{
     </style>
   </head>
   <body>
-    <div id="load_screen"><div id="loading">Game Loading</div></div>
+    <div id="load_screen"><div id="loading" style="position: absolute; top: 50%; left: 50%;"src="SiegeLoadingScreen.gif">Game Loading</div></div>
+    <script src="Howler.js"></script>
+
 
       <div id="divGame">
           <img id="layer1" src="GameTextures/Train Station33.png" alt="Layer 1">
