Added Attackers and Defenders

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ span.psw {
    width: 20%;
    ">Play Game </button>
   <div class="dropdown-content">
-    <a href="Casual.html">Casual</a>
+    <a href="SideSelect.html">Casual</a>
     <a href="#">Ranked</a>
     <a href="#">Terrorist Hunt</a>
   </div>
