--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -172,7 +172,7 @@ window.addEventListener("load", function(){
 </a>
 
 <a href="TrainStation.html">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/Whisper.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Whisper.png">
 </a>
 <a href="TrainStation.html">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
