Added Roit to game

--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -162,7 +162,7 @@ window.addEventListener("load", function(){
   <img srcset="OperatorImages/Outlast.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Outlast.png">
 </a>
 <a href="TrainStation.html">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/Riot.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Riot.png">
 </a>
 <a href="TrainStation.html">
   <img srcset="OperatorImages/Outlook.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Outlook.png">
