--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -209,7 +209,7 @@ window.addEventListener("load", function(){
 <div id="id01" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-      <p style=" position: absolute; font-size: 15px; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a ball that deploys water and freezes it when the button is clicked</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Glaze.png"></img>
     </div>
     <div class="container" style="background-color:#f1f1f1">
@@ -220,7 +220,7 @@ window.addEventListener("load", function(){
 <div id="id02" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-    <p style=" position: absolute; font-size: 15px; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has invincibility for 3 seconds and can only get down to 1 hp while invincible</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlast.png"></img>
     </div>
     <div class="container" style="background-color:#f1f1f1">
@@ -231,7 +231,7 @@ window.addEventListener("load", function(){
 <div id="id03" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-      <p style=" position: absolute; font-size: 15px; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Gets a speed boost and can tackel people into walls</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Riot.png"></img>
     </div>
     <div class="container" style="background-color:#f1f1f1">
@@ -242,7 +242,7 @@ window.addEventListener("load", function(){
 <div id="id04" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-      <p style=" position: absolute; font-size: 15px; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Cloud9Benis.png"></img>
     </div>
     <div class="container" style="background-color:#f1f1f1">
@@ -253,7 +253,7 @@ window.addEventListener("load", function(){
 <div id="id05" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-      <p style=" position: absolute; font-size: 15px; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a drone that can be deployed and used to spot people with</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlook.png"></img>
     </div>
     <div class="container" style="background-color:#f1f1f1">
@@ -264,7 +264,7 @@ window.addEventListener("load", function(){
 <div id="id06" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
-      <p style=" position: absolute; font-size: 15px; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Whisper.png"></img>
     </div>
     <div class="container" style="background-color:#f1f1f1">
