Added names to bios

--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -106,6 +106,14 @@ window.addEventListener("load", function(){
         color: white;
         font-family: "Arial";
     }
+    .square {
+      position: absolute;
+      top: 40%;
+      left: 7%;
+      height: 165px;
+      width: 345px;
+      background-color: rgba(85,88,136,0.6);
+    }
     modal:hover{
     }
     .modal{
@@ -209,9 +217,11 @@ window.addEventListener("load", function(){
 <div id="id01" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+        <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Glaze</p>
       <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a ball that deploys water and freezes it when the button is clicked</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Glaze.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -220,9 +230,11 @@ window.addEventListener("load", function(){
 <div id="id02" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Outlast</p>
     <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has invincibility for 3 seconds and can only get down to 1 hp while invincible</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlast.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -231,9 +243,11 @@ window.addEventListener("load", function(){
 <div id="id03" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Riot</p>
       <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Gets a speed boost and can tackel people into walls</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Riot.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -242,9 +256,11 @@ window.addEventListener("load", function(){
 <div id="id04" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Cloud9 Benis</p>
       <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Cloud9Benis.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -253,9 +269,11 @@ window.addEventListener("load", function(){
 <div id="id05" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Outlast</p>
       <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a drone that can be deployed and used to spot people with</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlook.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -264,9 +282,11 @@ window.addEventListener("load", function(){
 <div id="id06" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Whisper</p>
       <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Whisper.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
