--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -106,6 +106,14 @@ window.addEventListener("load", function(){
         color: white;
         font-family: "Arial";
     }
+    .square {
+      position: absolute;
+      top: 40%;
+      left: 7%;
+      height: 165px;
+      width: 345px;
+      background-color: rgba(85,88,136,0.6);
+    }
     modal:hover{
     }
     .modal{
@@ -210,9 +218,11 @@ window.addEventListener("load", function(){
 <div id="id01" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Blackout</p>
     <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Turns off the lights for the enemies and every attacker gets night vision for a couple of seconds</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Blackout.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -221,9 +231,11 @@ window.addEventListener("load", function(){
 <div id="id02" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Pewdiepie</p>
     <p style=" position: absolute; font-size: 15px; top: 15%; text-align: left; left: 31%;">Can clap stunning enemies in a radius</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Pewdiepie.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -232,9 +244,11 @@ window.addEventListener("load", function(){
 <div id="id03" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Bullet Point</p>
     <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can unload a full clip in under 3 seconds</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/BulletPoint.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -243,9 +257,11 @@ window.addEventListener("load", function(){
 <div id="id04" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Tortue</p>
     <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a shield on his back that minimizes damage when the shield is shot</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Tortue.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -254,9 +270,11 @@ window.addEventListener("load", function(){
 <div id="id05" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Vision</p>
     <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a radius blast like honzos arrow that detects people in the vicinity</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Vision.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -265,9 +283,11 @@ window.addEventListener("load", function(){
 <div id="id06" class="modal">
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
+      <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Javelin</p>
     <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can throw an explosive javelin that blows up on contact</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Javelin.png"></img>
     </div>
+    <div class="square"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
