A lot of boi stuff was made

--- a/CasualAttacker.html
+++ b/CasualAttacker.html
@@ -108,11 +108,11 @@ window.addEventListener("load", function(){
     }
     .square {
       position: absolute;
-      top: 40%;
-      left: 7%;
-      height: 165px;
-      width: 345px;
-      background-color: rgba(85,88,136,0.6);
+      top: 35%;
+      left: 4%;
+      height: 195px;
+      width: 370px;
+      background-color: rgba(70,70,70,0.6);
     }
     modal:hover{
     }
@@ -219,10 +219,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Blackout</p>
-    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Turns off the lights for the enemies and every attacker gets night vision for a couple of seconds</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Turns off the lights for the enemies and every attacker gets night vision for a couple of seconds.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Blackout.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -232,10 +237,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Pewdiepie</p>
-    <p style=" position: absolute; font-size: 15px; top: 15%; text-align: left; left: 31%;">Can clap stunning enemies in a radius</p>
+    <p style=" position: absolute; font-size: 11px; top: 15%; text-align: left; left: 31%;">Can clap stunning enemies in a radius.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Pewdiepie.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -245,10 +255,17 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Bullet Point</p>
-    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can unload a full clip in under 3 seconds</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Can unload a full clip in under 3 seconds.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/BulletPoint.png"></img>
     </div>
     <div class="square"></div>
+    <img style=" position: absolute; top: 60%; left: 8%; width: 210px; height: 67px;" srcset="GameTextures/GunAK47BulletPiont.png"></img>
+    <img style=" position: absolute; top: 60%; left: 65%; width: 88px; height: 57px;" srcset="GameTextures/Tokarev.png"></img>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: AK-47</p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: Tokarev</p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -258,10 +275,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Tortue</p>
-    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a shield on his back that minimizes damage when the shield is shot</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has a shield on his back that minimizes damage. The shield is nearly invicible unless confronted with explosives this causes the shield to break leaving him defenceless, although it is immune to gunfire.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Tortue.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -271,10 +293,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Vision</p>
-    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a radius blast like honzos arrow that detects people in the vicinity</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">His mask does and AOE pulse that is used to detect enemies through walls pinging their location for him and his entire team.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Vision.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -284,10 +311,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Javelin</p>
-    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can throw an explosive javelin that blows up on contact</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Can throw an explosive javelin that blows up on contact  only has two. They do AOE damage when they blow up doing 75 damage.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Javelin.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
