--- a/CasualDefender.html
+++ b/CasualDefender.html
@@ -108,11 +108,11 @@ window.addEventListener("load", function(){
     }
     .square {
       position: absolute;
-      top: 40%;
-      left: 7%;
-      height: 165px;
-      width: 345px;
-      background-color: rgba(85,88,136,0.6);
+      top: 35%;
+      left: 4%;
+      height: 195px;
+      width: 370px;
+      background-color: rgba(70,70,70,0.6);
     }
     modal:hover{
     }
@@ -218,10 +218,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
         <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Glaze</p>
-      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a ball that deploys water and freezes it when the button is clicked</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has a ball that deploys water and freezes it when the button is clicked.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Glaze.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -231,10 +236,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Outlast</p>
-    <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has invincibility for 3 seconds and can only get down to 1 hp while invincible</p>
+    <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Has invincibility for 3 seconds and can only get down to 1 hp while invincible.</p>
     <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlast.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -244,10 +254,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Riot</p>
-      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Gets a speed boost and can tackel people into walls</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Gets a speed boost and can tackel people into walls.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Riot.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -257,10 +272,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Cloud9 Benis</p>
-      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Can clap stunning enemies in a radius</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">?????????????????????????</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Cloud9Benis.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -270,10 +290,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Outlast</p>
-      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Has a drone that can be deployed and used to spot people with</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">His mask does and AOE that can be used to detect enemies through walls pinging their location for him. This only can be used every 20 seconds.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Outlook.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
@@ -283,10 +308,15 @@ window.addEventListener("load", function(){
   <form class="modal-content animate" action="/CasualAttacker.html">
     <div class="container">
       <p style=" position: absolute; font-size: 35px; text-align: center; top: -7%; left: 31%;">Whisper</p>
-      <p style=" position: absolute; font-size: 15px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy</p>
+      <p style=" position: absolute; font-size: 11px; text-align: left; top: 15%; left: 31%;">Creates fake decoy sounds and other noises to throw off the enemy.</p>
       <img style=" position: absolute; top: 10; left: 10; width: 90px; height: 90px;" srcset="OperatorImages/Whisper.png"></img>
     </div>
     <div class="square"></div>
+    <p style=" position: absolute; top: 30%; left: 39%; font-size: 20px; color: #000000; text-align: center; font-weight: bold; ">WEAPONS</p>
+    <p style=" position: absolute; top: 44%; left: 10%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">PRIMARY: </p>
+    <p style=" position: absolute; top: 44%; left: 64%; font-size: 15px; color: #000000; text-align: left; font-weight: bold; ">SIDE: </p>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 7%; height: 78px; width: 215px; background-color: rgba(0,0,0,0.0);"></div>
+    <div style="position: absolute; border-style: solid; border-color: #000000; opacity: 0.5; top: 58%; left: 62%; height: 78px; width: 117px; background-color: rgba(0,0,0,0.0);"></div>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
