--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ span.psw {
 
     <button
     style="position: absolute;
-    top: 106%;
+    top: 110%;
     left: 50%;
     margin-top: -10%;
     margin-left: -10%;
@@ -200,11 +200,21 @@ span.psw {
 
    <button onclick="document.getElementById('id01').style.display='block'"
    style="position: absolute;
-   top: 96%;  left: 50%;
+   top: 102%;  left: 50%;
    margin-top: -10%;
    margin-left: -10%;
    width: 20%;
    ">Settings</button>
+
+   <a href="Barracks.html">
+   <button
+   style="position: absolute;
+   top: 94%;  left: 50%;
+   margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;
+   ">Barracks</button>
+   </a>
 
 <div id="id01" class="modal">
 
