--- a/TrainStation.html
+++ b/TrainStation.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="GameIcons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="GameIcons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="GameIcons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="GameIcons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="GameIconsGameIcons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="GameIcons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="GameIcons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="GameIcons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="GameIcons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="GameIcons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="GameIcons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="GameIcons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="GameIcons/favicon-16x16.png">
+<link rel="manifest" href="GameIcons/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="GameIcons/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <meta name="viewport" content= "width=device-width, user-scalable=no">
-      
+
       <script type="text/javascript" src="/paper-full.js"></script>
 
     <style>
@@ -156,7 +156,7 @@ div#load_screen > div#loading{
                 <!--<polygon id="col1" class="collision" points = "38 100, 38 260, 140 270, 220 335, 20 560, 165 712, 100 810, 35 805, 40 1010, 325 1015, 330 1180, 0 1180, 0 1290, 600 1290, 600 1485, 850 1525, 575 1530, 485 1515, 485 1315, 360 1315, 360 1485, 255 1485, 250 1310, 120 1310, 120 1510, 0 1510, 0 1900, 70 1975, 170 1970, 170 2075, 245 2145, 170 2215, 170 2310, 70 2315, 0 2390, 0 2665, 360 2665, 360 2690, 25 2690, 0 4000, 45 4000, 4000 4000, 4000 3975, 40 3975" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
                 <polygon id="col2" class="collision" points = "40 0, 1910 0, 1910 1700, 1155 1700, 1155 1525, 950 1525, 950 1510, 1155 1510, 1155 1160, 450 1160, 450 1020, 630 1020, 630 790, 680 790, 680 1020, 930 1020, 930 735, 1040 735, 1040 1020, 1410 1020, 1410 790, 1470 790, 1470 1020, 1830 1020, 1830 85, 1480 85, 1480 320, 1410 320, 1410 85, 680 85, 680 320, 630 320, 630 85, 40 100" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
                 <polygon id="col3" class="collision" points = "4000 3975, 3725 3975, 3725 3660, 3515 3660, 3515 3640, 3745 3640, 3745 3955, 3985 3955, 3985 830, 3920 830, 3920 895, 3140 895, 3140 825, 2965 825, 2965 630, 2985 630, 2990 800, 3980 800, 3975 0, 3980 440, 3070 440, 3070 365, 2985 365, 2985 495, 2960 495, 2960 300, 2980 300, 2980 340, 3070 340, 3070 260, 3975 260, 3975 10, 2985 10, 2985 170, 2960 170, 2960 10, 1910 10, 1910 0, 2960 0, 3975 0, 3980 0, 3990 800" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>-->
-              
+
               <rect class="collision" x="0" y="0" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
               <rect class="collision" x="0" y="0" height="4000" width="30" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
               <rect class="collision" x="0" y="4000" height="30" width="4000" style="fill:lime;stroke:purple;stroke-width:1;opacity:0.5;"/>
