--- a/HowToPlay.html
+++ b/HowToPlay.html
@@ -129,6 +129,18 @@ span.psw {
 }
 </style>
 
+<img style=" position: absolute; top: 23%; left: 21%; width: 5%; height: 8%;" src="Keys/W1.png">
+<img style=" position: absolute; top: 32%; left: 15.5%; width: 5%; height: 8%;" src="Keys/A1.png">
+<img style=" position: absolute; top: 32%; left: 21%; width: 5%; height: 8%;" src="Keys/S1.png">
+<img style=" position: absolute; top: 32%; left: 26.5%; width: 5%; height: 8%;" src="Keys/D1.png">
+
+<img style=" position: absolute; top: 32%; left: 40%; width: 9%; height: 8%;" src="Keys/Shift1.png">
+
+<img style=" position: absolute; top: 32%; left: 60%; width: 5%; height: 8%;" src="Keys/R1.png">
+
+<img style=" position: absolute; top: 32%; left: 78%; width: 5%; height: 8%;" src="Keys/and-1.png">
+<img style=" position: absolute; top: 32%; left: 83.5%; width: 5%; height: 8%;" src="Keys/@-and-2.png">
+
 <a href="index.html">
 <button style="position: absolute; top: 80%; left: 40%; color:#ffffff;">Return</button>
 </a>
