--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ can.style.height = window.innerHeight + "px";>
   <img  style="
   position: absolute;
   pointer-events: none;
-  top: 40%;
+  top: 35%;
   left: 48%;
   margin-top: -220px;
   margin-left: -180px;
@@ -58,7 +58,7 @@ can.style.height = window.innerHeight + "px";>
 .dropdown-content {
   display: none;
   position: absolute;
-   top: 84%;
+   top: 81%;
    left: 50%;
    margin-top: -10%;
    margin-left: -10%;
@@ -166,7 +166,7 @@ span.psw {
   <button class="button"
   style="
    position: absolute;
-   top: 86%;
+   top: 81%;
    left: 50%;
    margin-top: -10%;
    margin-left: -10%;
@@ -191,7 +191,7 @@ span.psw {
     <a href="Credits.html">
     <button
     style="position: absolute;
-    top: 110%;
+    top: 113%;
     left: 50%;
     margin-top: -10%;
     margin-left: -10%;
@@ -201,7 +201,7 @@ span.psw {
 
    <button onclick="document.getElementById('id01').style.display='block'"
    style="position: absolute;
-   top: 102%;  left: 50%;
+   top: 97%;  left: 50%;
    margin-top: -10%;
    margin-left: -10%;
    width: 20%;
@@ -210,27 +210,27 @@ span.psw {
    <a href="Barracks.html">
    <button
    style="position: absolute;
-   top: 94%;  left: 50%;
+   top: 89%;  left: 50%;
    margin-top: -10%;
    margin-left: -10%;
    width: 20%;
    ">Barracks</button>
    </a>
 
+   <a href="HowToPlay.html">
+   <button style="position: absolute; top: 105%; left: 50%; margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;">How To Play</button>
+   </a>
+
 <div id="id01" class="modal">
-
   <form class="modal-content animate" action="/index.html">
-
-
     <div class="container">
       <iframe src="Songs/Music2.mp3" allow="autoplay" loop controls
       style="position: absolute;"
       id="iframeAudio">
 </iframe>
     </div>
-    <a href="HowToPlay.html">
-    <button style="position: absolute; width: 304px; height: 50px;">How To Play<button>
-    </a>
     <div class="container" style="background-color:#f1f1f1">
     </div>
   </form>
